
include $(top_srcdir)/Makefile.am.common

noinst_HEADERS = sad_capture.h \
                 sad_conf.h \
                 sad_crypto.h \
                 sad_debug.h \
                 sad_debug_info.h \
                 sad_error.h \
                 sad_globals.h \
                 sad_hash.h \
                 sad_inet.h \
                 sad_key.h \
                 sad_main.h \
                 sad_neigh.h \
                 sad_parser.h \
                 sad_sarp.h \
                 sad_signal.h \
                 sad_stdint.h \
                 sad_syslog.h \
                 sad_version.h \
                 sarp_crypto.h \
                 sarp_error.h \
                 sarp_globals.h \
                 sarp_main.h \
                 sarp_parser.h \
                 sarp_version.h 
   
EXTRA_DIST = missing/strlcpy.h \
             missing/strlcat.h \
             missing/queue.h \
             missing/getopt.h

